--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ tensorflow = "==2.2.0-rc3"
 hilbertcurve = "*"
 pillow = "*"
 tensorflow-datasets = "*"
+matplotlib = "*"
 
 [requires]
 python_version = "3.6"
